kubernetes/apps/networking/cilium/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  hostnames:
    - hubble.${CLUSTER_DOMAIN}
  parentRefs:
    - name: tailnet
      namespace: gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: hubble-ui
          port: 80
